--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,2 +1,7 @@
-<h1>Home#index</h1>
-<p>Find me in app/views/home/index.html.erb</p>
+<h1 text align="center">Agenda de contatos</h1>
+<ul>
+<li><%=link_to 'Contatos', contacts_path%></li>
+<li><%= link_to 'Tipos', kinds_path%></li>
+<li><%= link_to 'Endereços', addresses_path%></li>
+<li><%= link_to 'Telefone', phones_path%></li>
+</ul>
