all_working_like_expected

--- a/app/views/addresses/_form.html.erb
+++ b/app/views/addresses/_form.html.erb
@@ -28,7 +28,7 @@
 
   <div class="field">
     <%= form.label :contact_id %>
-    <%= form.text_field :contact_id %>
+    <%= collection_select(:address, :contact_id, @contact_options, :id, :name )%>
   </div>
 
   <div class="actions">
