--- a/app/views/addresses/index.html.erb
+++ b/app/views/addresses/index.html.erb
@@ -1,3 +1,4 @@
+<div class="basic-grey">
 <p id="notice"><%= notice %></p>
 
 <h1>Addresses</h1>
@@ -30,4 +31,6 @@
 
 <br>
 
-<%= link_to 'New Address', new_address_path %>
+<%= link_to 'New Address', new_address_path, class:"button" %>
+<%= link_to 'Home', home_index_path, class:"button" %>
+</div>
