--- a/app/views/contacts/index.html.erb
+++ b/app/views/contacts/index.html.erb
@@ -31,5 +31,6 @@
 
 <br>
 
-<%= link_to 'New Contact', new_contact_path %>
+<%= link_to 'New Contact', new_contact_path, class:"button" %>
+<%= link_to 'Home', home_index_path, class:"button"%>
 </div>
