--- a/app/views/kinds/_form.html.erb
+++ b/app/views/kinds/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: kind) do |form| %>
+<%= form_with(model: kind, html: { class: "basic-grey" }) do |form| %>
   <% if kind.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(kind.errors.count, "error") %> prohibited this kind from being saved:</h2>
@@ -17,6 +17,7 @@
   </div>
 
   <div class="actions">
-    <%= form.submit %>
+    <%= form.submit "Enviar", class:"button" %>
+    <%= link_to 'Back', kinds_path, class:"button" %>
   </div>
 <% end %>
