--- a/app/views/kinds/edit.html.erb
+++ b/app/views/kinds/edit.html.erb
@@ -1,6 +1,4 @@
-<h1>Editing Kind</h1>
+<h1 class="basic-grey h1">Editing Kind</h1>
 
 <%= render 'form', kind: @kind %>
 
-<%= link_to 'Show', @kind %> |
-<%= link_to 'Back', kinds_path %>
