--- a/app/views/kinds/index.html.erb
+++ b/app/views/kinds/index.html.erb
@@ -1,3 +1,4 @@
+<div class="basic-grey">
 <p id="notice"><%= notice %></p>
 
 <h1>Kinds</h1>
@@ -24,4 +25,6 @@
 
 <br>
 
-<%= link_to 'New Kind', new_kind_path %>
+<%= link_to 'New Kind', new_kind_path, class:"button" %>
+<%= link_to 'Home', home_index_path, class:"button" %>
+</div>
