--- a/app/views/kinds/new.html.erb
+++ b/app/views/kinds/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New Kind</h1>
+<h1 class="basic-grey h1">New Kind</h1>
 
 <%= render 'form', kind: @kind %>
 
-<%= link_to 'Back', kinds_path %>
+
