--- a/app/views/phones/index.html.erb
+++ b/app/views/phones/index.html.erb
@@ -1,3 +1,4 @@
+<div class="basic-grey">
 <p id="notice"><%= notice %></p>
 
 <h1>Phones</h1>
@@ -26,4 +27,6 @@
 
 <br>
 
-<%= link_to 'New Phone', new_phone_path %>
+<%= link_to 'New Phone', new_phone_path, class:"button" %>
+<%= link_to 'Home', home_index_path, class:"button"%>
+</div>
