--- a/app/views/addresses/_form.html.erb
+++ b/app/views/addresses/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: address) do |form| %>
+<%= form_with(model: address, html: { class:"basic-grey" }) do |form| %>
   <% if address.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(address.errors.count, "error") %> prohibited this address from being saved:</h2>
@@ -32,6 +32,7 @@
   </div>
 
   <div class="actions">
-    <%= form.submit %>
+    <%= form.submit "Enviar", class:"button" %>
+    <%= link_to 'Back', addresses_path, class:"button" %>
   </div>
 <% end %>
