--- a/app/views/addresses/edit.html.erb
+++ b/app/views/addresses/edit.html.erb
@@ -1,6 +1,4 @@
-<h1>Editing Address</h1>
+<h1 class="basic-grey h1">Editing Address</h1>
 
 <%= render 'form', address: @address %>
 
-<%= link_to 'Show', @address %> |
-<%= link_to 'Back', addresses_path %>
