--- a/app/views/addresses/show.html.erb
+++ b/app/views/addresses/show.html.erb
@@ -1,3 +1,4 @@
+<div class="basic-grey">
 <p id="notice"><%= notice %></p>
 
 <p>
@@ -22,3 +23,4 @@
 
 <%= link_to 'Edit', edit_address_path(@address) %> |
 <%= link_to 'Back', addresses_path %>
+</div>
