--- a/app/views/phones/_form.html.erb
+++ b/app/views/phones/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: phone) do |form| %>
+<%= form_with(model: phone, html: { class: "basic-grey" }) do |form| %>
   <% if phone.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(phone.errors.count, "error") %> prohibited this phone from being saved:</h2>
@@ -22,6 +22,7 @@
   </div>
 
   <div class="actions">
-    <%= form.submit %>
+    <%= form.submit "Enviar", class:"button" %>
+    <%= link_to 'Back', phones_path, class:"button" %>
   </div>
 <% end %>
