--- a/app/views/addresses/_form.html.erb
+++ b/app/views/addresses/_form.html.erb
@@ -33,6 +33,6 @@
 
   <div class="actions">
     <%= form.submit "Enviar", class:"button" %>
-    <%= link_to 'Back', addresses_path, class:"button" %>
+    <%= link_to 'Voltar', addresses_path, class:"button" %>
   </div>
 <% end %>
