--- a/app/views/contacts/show.html.erb
+++ b/app/views/contacts/show.html.erb
@@ -2,7 +2,7 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <strong>Name:</strong>
+  <strong>Nome:</strong>
   <%= @contact.name %>
 </p>
 
@@ -12,15 +12,15 @@
 </p>
 
 <p>
-  <strong>Kind:</strong>
+  <strong>Tipo:</strong>
   <%= @contact.kind_id %>
 </p>
 
 <p>
-  <strong>Rmk:</strong>
+  <strong>Observações:</strong>
   <%= @contact.rmk %>
 </p>
 
-<%= link_to 'Edit', edit_contact_path(@contact) %> |
-<%= link_to 'Back', contacts_path %>
+<%= link_to 'Editar', edit_contact_path(@contact), class:"button" %> |
+<%= link_to 'Voltar', contacts_path, class:"button" %>
 </div>
