--- a/app/views/kinds/_form.html.erb
+++ b/app/views/kinds/_form.html.erb
@@ -18,6 +18,6 @@
 
   <div class="actions">
     <%= form.submit "Enviar", class:"button" %>
-    <%= link_to 'Back', kinds_path, class:"button" %>
+    <%= link_to 'Voltar', kinds_path, class:"button" %>
   </div>
 <% end %>
