--- a/app/views/phones/_form.html.erb
+++ b/app/views/phones/_form.html.erb
@@ -23,6 +23,6 @@
 
   <div class="actions">
     <%= form.submit "Enviar", class:"button" %>
-    <%= link_to 'Back', phones_path, class:"button" %>
+    <%= link_to 'Voltar', phones_path, class:"button" %>
   </div>
 <% end %>
