--- a/app/views/addresses/index.html.erb
+++ b/app/views/addresses/index.html.erb
@@ -1,15 +1,15 @@
 <div class="basic-grey">
 <p id="notice"><%= notice %></p>
 
-<h1>Addresses</h1>
+<h1>Endereços</h1>
 
 <table>
   <thead>
     <tr>
-      <th>Street</th>
-      <th>City</th>
-      <th>State</th>
-      <th>Contact</th>
+      <th>Rua</th>
+      <th>Cidade</th>
+      <th>Estado</th>
+      <th>Contato</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -21,9 +21,9 @@
         <td><%= address.city %></td>
         <td><%= address.state %></td>
         <td><%= address.contact_id %></td>
-        <td><%= link_to 'Show', address %></td>
-        <td><%= link_to 'Edit', edit_address_path(address) %></td>
-        <td><%= link_to 'Destroy', address, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Ver', address %></td>
+        <td><%= link_to 'Editar', edit_address_path(address) %></td>
+        <td><%= link_to 'Excluir', address, method: :delete, data: { confirm: 'Você tem certeza?' } %></td>
       </tr>
     <% end %>
   </tbody>
@@ -31,6 +31,6 @@
 
 <br>
 
-<%= link_to 'New Address', new_address_path, class:"button" %>
-<%= link_to 'Home', home_index_path, class:"button" %>
+<%= link_to 'Novo endereço', new_address_path, class:"button" %>
+<%= link_to 'Tela incial', home_index_path, class:"button" %>
 </div>
