--- a/app/views/contacts/index.html.erb
+++ b/app/views/contacts/index.html.erb
@@ -1,15 +1,15 @@
 <div class="basic-grey">
 <p id="notice"><%= notice %></p>
 
-<h1>Contacts</h1>
+<h1>Contatos</h1>
 
 <table>
   <thead>
     <tr>
-      <th>Name</th>
+      <th>Nome</th>
       <th>Email</th>
-      <th>Kind</th>
-      <th>Rmk</th>
+      <th>Tipo</th>
+      <th>Observações</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -21,9 +21,9 @@
         <td><%= contact.email %></td>
         <td><%= contact.kind_id %></td>
         <td><%= contact.rmk %></td>
-        <td><%= link_to 'Show', contact %></td>
-        <td><%= link_to 'Edit', edit_contact_path(contact) %></td>
-        <td><%= link_to 'Destroy', contact, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Ver', contact %></td>
+        <td><%= link_to 'Editar', edit_contact_path(contact) %></td>
+        <td><%= link_to 'Excluir', contact, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
@@ -31,6 +31,6 @@
 
 <br>
 
-<%= link_to 'New Contact', new_contact_path, class:"button" %>
-<%= link_to 'Home', home_index_path, class:"button"%>
+<%= link_to 'Novo contato', new_contact_path, class:"button" %>
+<%= link_to 'Tela inicial', home_index_path, class:"button"%>
 </div>
