--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -1,4 +1,4 @@
-<h1 class="basic-grey h1">New Contact</h1>
+<h1 class="basic-grey h1">Novo contato</h1>
 
 <%= render 'form', contact: @contact %>
 
