--- a/app/views/kinds/index.html.erb
+++ b/app/views/kinds/index.html.erb
@@ -6,7 +6,7 @@
 <table>
   <thead>
     <tr>
-      <th>Description</th>
+      <th>Descrição</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -15,9 +15,9 @@
     <% @kinds.each do |kind| %>
       <tr>
         <td><%= kind.description %></td>
-        <td><%= link_to 'Show', kind %></td>
-        <td><%= link_to 'Edit', edit_kind_path(kind) %></td>
-        <td><%= link_to 'Destroy', kind, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Ver', kind %></td>
+        <td><%= link_to 'Editar', edit_kind_path(kind) %></td>
+        <td><%= link_to 'Excluir', kind, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
@@ -25,6 +25,6 @@
 
 <br>
 
-<%= link_to 'New Kind', new_kind_path, class:"button" %>
-<%= link_to 'Home', home_index_path, class:"button" %>
+<%= link_to 'Novo tipo', new_kind_path, class:"button" %>
+<%= link_to 'Tela inicial', home_index_path, class:"button" %>
 </div>
