--- a/app/views/phones/index.html.erb
+++ b/app/views/phones/index.html.erb
@@ -17,9 +17,9 @@
       <tr>
         <td><%= phone.Phone %></td>
         <td><%= phone.contact_id %></td>
-        <td><%= link_to 'Show', phone %></td>
-        <td><%= link_to 'Edit', edit_phone_path(phone) %></td>
-        <td><%= link_to 'Destroy', phone, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Ver', phone %></td>
+        <td><%= link_to 'Editar', edit_phone_path(phone) %></td>
+        <td><%= link_to 'Excluir', phone, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
@@ -27,6 +27,6 @@
 
 <br>
 
-<%= link_to 'New Phone', new_phone_path, class:"button" %>
-<%= link_to 'Home', home_index_path, class:"button"%>
+<%= link_to 'Novo telefone', new_phone_path, class:"button" %>
+<%= link_to 'Voltar', home_index_path, class:"button"%>
 </div>
