--- a/app/views/contacts/index.html.erb
+++ b/app/views/contacts/index.html.erb
@@ -6,10 +6,10 @@
 <table>
   <thead>
     <tr>
-      <th>Nome</th>
-      <th>Email</th>
-      <th>Tipo</th>
-      <th>Observações</th>
+      <th><%= Contact.human_attribute_name("name") %></th>
+      <th><%= Contact.human_attribute_name("email") %></th>
+      <th><%= Contact.human_attribute_name("kind") %></th>
+      <th><%= Contact.human_attribute_name("rmk")%></th>
       <th colspan="3"></th>
     </tr>
   </thead>
