--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,6 +1,8 @@
 <div class="basic-grey">
 <div class="basic-grey h1"><h1>Agenda de contatos</h1></div>
 <div class="basic-grey .button ">
+<h2><%= t 'hello' %></h2>
+<h2><%= l Date.today %></h2>
 <ul>
 <li><%=link_to 'Contatos', contacts_path%></li>
 <li><%= link_to 'Tipos', kinds_path%></li>
