--- a/app/views/contacts/_form.html.erb
+++ b/app/views/contacts/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: contact, html: { class: "basic-grey"}) do |form| %>
+<%= form_with(model: @contact, html: { class: "basic-grey"}) do |form| %>
   <% if contact.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(contact.errors.count, "error") %> prohibited this contact from being saved:</h2>
@@ -28,18 +28,26 @@
 
   <%= form.fields_for :address do |address_fields| %>
     <div class="field">
-    <%= form.label :street %>
-    <%= address_fields.text_field :street%>
+      <%= form.label :street %>
+      <%= address_fields.text_field :street%>
     </div>
     <div class="field">
-    <%= form.label :city %>
-    <%= address_fields.text_field :city %>
+      <%= form.label :city %>
+      <%= address_fields.text_field :city %>
     <div>
-    <div class="field">
-    <%= form.label :state %>
-    <%= address_fields.text_field :state%>
-    <div>
+      <div class="field">
+        <%= form.label :state %>
+        <%= address_fields.select :state, options_for_select([["Bahia", "BA"], ["São Paulo", "SP"], ["Rio de Janeiro", "RJ"], ["Distrito Federal", "DF"]], @contact.address.state )%>
+      <div>
     <%end%>
+
+  <div id="phones">
+    <%= form.fields_for :phones do |phones_fields| %>
+      <%= render "phone_fields", :form => phones_fields %>
+    <%end%>
+
+    <%= link_to_add_association('[Adicionar Telefone]', form, :phones, form_name: 'form', partial: 'phone_fields') %>
+  </div>
 
   <div class="field">
     <%= form.label :rmk %>
@@ -48,6 +56,6 @@
 
   <div class="actions">
     <%= form.submit "Enviar", class:"button" %>
-  <%= link_to 'Back', contacts_path, class:"button" %>
+    <%= link_to 'Back', contacts_path, class:"button" %>
   </div>
 <% end %>
