--- a/app/views/contacts/_form.html.erb
+++ b/app/views/contacts/_form.html.erb
@@ -37,7 +37,7 @@
     <div>
       <div class="field">
         <%= form.label :state %>
-        <%= address_fields.select :state, options_for_select([["Bahia", "BA"], ["São Paulo", "SP"], ["Rio de Janeiro", "RJ"], ["Distrito Federal", "DF"]], @contact.address.state )%>
+        <%= address_fields.select :state, options_for_states(@contact.address.state)%>
       <div>
     <%end%>
 
