--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -1,4 +1,10 @@
 // * Basic Grey */
+a {
+    color: #888;
+}
+table {
+    width: 100%;
+}
 .basic-grey {
     margin-left:auto;
     margin-right:auto;
@@ -81,4 +87,20 @@
 }
 .basic-grey .button:hover {
     background: #CF7A7A
+}
+.basic-grey input[type="text"].phone-field{
+    border: 1px solid #DADADA;
+    color: #888;
+    height: 30px;
+    margin-bottom: 16px;
+    margin-right: 6px;
+    margin-top: 2px;
+    outline: 0 none;
+    padding: 3px 3px 3px 5px;
+    width: 55%;
+    font-size: 12px;
+    line-height:15px;
+    box-shadow: inset 0px 1px 4px #ECECEC;
+    -moz-box-shadow: inset 0px 1px 4px #ECECEC;
+    -webkit-box-shadow: inset 0px 1px 4px #ECECEC;
 }
