--- a/app/views/addresses/show.html.erb
+++ b/app/views/addresses/show.html.erb
@@ -18,7 +18,7 @@
 
 <p>
   <strong>Contato:</strong>
-  <%= @address.contact_id %>
+  <%= @address.contact.name %>
 </p>
 
 <%= link_to 'Editar', edit_address_path(@address), class:"button" %> |
