--- a/app/views/contacts/index.html.erb
+++ b/app/views/contacts/index.html.erb
@@ -7,20 +7,16 @@
   <thead>
     <tr>
       <th><%= Contact.human_attribute_name("name") %></th>
-      <th><%= Contact.human_attribute_name("email") %></th>
       <th><%= Contact.human_attribute_name("kind") %></th>
-      <th><%= Contact.human_attribute_name("rmk")%></th>
       <th colspan="3"></th>
     </tr>
   </thead>
 
   <tbody>
     <% @contacts.each do |contact| %>
-      <tr>
+      <tr style="background: <%= cycle('white', '#f0F0f5')%>">
         <td><%= contact.name %></td>
-        <td><%= contact.email %></td>
-        <td><%= contact.kind_id %></td>
-        <td><%= contact.rmk %></td>
+        <td><%= contact.kind.description %></td>
         <td><%= link_to 'Ver', contact %></td>
         <td><%= link_to 'Editar', edit_contact_path(contact) %></td>
         <td><%= link_to 'Excluir', contact, method: :delete, data: { confirm: 'Are you sure?' } %></td>
@@ -29,6 +25,11 @@
   </tbody>
 </table>
 
+<br>
+<div>
+  <%= paginate @contacts, window: 2 %>
+<div>
+<br>
 <br>
 
 <%= link_to 'Novo contato', new_contact_path, class:"button" %>
