--- a/app/views/phones/show.html.erb
+++ b/app/views/phones/show.html.erb
@@ -8,7 +8,7 @@
 
 <p>
   <strong>Contato:</strong>
-  <%= @phone.contact_id %>
+  <%= @phone.contact.name %>
 </p>
 
 <%= link_to 'Editar', edit_phone_path(@phone), class:"button" %> |
