--- a/app/views/contacts/_form.html.erb
+++ b/app/views/contacts/_form.html.erb
@@ -1,16 +1,4 @@
 <%= form_with(model: @contact, html: { class: "basic-grey"}) do |form| %>
-  <% if contact.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(contact.errors.count, "error") %> prohibited this contact from being saved:</h2>
-
-      <ul>
-        <% contact.errors.each do |error| %>
-          <li><%= error.full_message %></li>
-        <% end %>
-      </ul>
-    </div>
-  <% end %>
-
   <div class="field">
     <%= form.label :name %>
     <%= form.text_field :name %>
@@ -61,4 +49,16 @@
     <%= form.submit "Enviar", class:"button" %>
     <%= link_to 'Back', contacts_path, class:"button" %>
   </div>
+
+  <% if contact.errors.any? %>
+    <div id="error_explanation">
+      <h2><%= "#{pluralize(contact.errors.count, '')} #{I18n.t('messages.errors')}:" %></h2>
+
+      <ul>
+        <% contact.errors.each do |error| %>
+          <li><%= error.full_message %></li>
+        <% end %>
+      </ul>
+    </div>
+  <% end %>
 <% end %>
