--- a/app/assets/stylesheets/scaffolds.scss.erb
+++ b/app/assets/stylesheets/scaffolds.scss.erb
@@ -6,10 +6,11 @@ table {
     width: 100%;
 }
 .basic-grey {
+    <% x  = "#F7F7F7" %>
     margin-left:auto;
     margin-right:auto;
     max-width: 500px;
-    background: #F7F7F7;
+    background: <%= x %>; 
     padding: 25px 15px 25px 10px;
     font: 12px Georgia, "Times New Roman", Times, serif;
     color: #888;
@@ -23,7 +24,7 @@ table {
     border-bottom:1px solid #E4E4E4;
     margin: -10px -15px 30px -10px;;
     color: #888;
-    text-align:center;
+    text-align: center;
 }
 .basic-grey h1>span {
     display: block;
