--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -6,6 +6,7 @@
         <li><%= link_to 'Tipos', kinds_path%></li>
         <li><%= link_to 'Endereços', addresses_path%></li>
         <li><%= link_to 'Telefone', phones_path%></li>
+        <li><%= link_to 'Teste de Ajax', phones_path, remote: true %></li>
       </ul>
     </div>
 </div>
