--- a/app/views/contacts/index.html.erb
+++ b/app/views/contacts/index.html.erb
@@ -32,6 +32,6 @@
 <br>
 <br>
 
-<%= link_to 'Novo contato', new_contact_path, class:"button" %>
-<%= link_to 'Tela inicial', home_index_path, class:"button"%>
+<%= link_to 'Novo contato', new_contact_path, class:"btn btn-primary" %>
+<%= link_to 'Tela inicial', root_path, class:"btn btn-success"%>
 </div>
