--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,12 +1,11 @@
+<br/><br/>
 <div class="basic-grey">
-  <div class="basic-grey h1"><h1>Agenda de contatos</h1></div>
-    <div class="basic-grey .button ">
-      <ul>
-        <li><%=link_to 'Contatos', contacts_path%></li>
-        <li><%= link_to 'Tipos', kinds_path%></li>
-        <li><%= link_to 'Endereços', addresses_path%></li>
-        <li><%= link_to 'Telefone', phones_path%></li>
-        <li><%= link_to 'Teste de Ajax', phones_path, remote: true %></li>
-      </ul>
-    </div>
+  <h1>Seja bem-vindo!</h1>
+    <ul>
+      <li><%=link_to 'Contatos', contacts_path%></li>
+      <li><%= link_to 'Tipos', kinds_path%></li>
+      <li><%= link_to 'Endereços', addresses_path%></li>
+      <li><%= link_to 'Telefone', phones_path%></li>
+      <li><%= link_to 'Teste de Ajax', phones_path, remote: true %></li>
+    </ul>
 </div>
