--- a/app/views/contacts/index.html.erb
+++ b/app/views/contacts/index.html.erb
@@ -1,23 +1,24 @@
 <div class="basic-grey">
-<p id="notice"><%= notice %></p>
+  <script>
+    $.notify("<%= notice %>", "success")
+  </script>
 
 <h1>Contatos</h1>
 
-<table>
+<table class="table table-hover">
   <thead>
     <tr>
       <th><%= Contact.human_attribute_name("name") %></th>
       <th><%= Contact.human_attribute_name("kind") %></th>
-      <th colspan="3"></th>
+      <th colspan="2"></th>
     </tr>
   </thead>
 
   <tbody>
     <% @contacts.each do |contact| %>
-      <tr style="background: <%= cycle('white', '#f0F0f5')%>">
+      <tr>
         <td><%= contact.name %></td>
         <td><%= contact.kind.description %></td>
-        <td><%= link_to 'Ver', contact %></td>
         <td><%= link_to 'Editar', edit_contact_path(contact) %></td>
         <td><%= link_to 'Excluir', contact, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
