--- a/app/views/kinds/_form.html.erb
+++ b/app/views/kinds/_form.html.erb
@@ -17,7 +17,7 @@
   </div>
 
   <div class="actions">
-    <%= form.submit "Enviar", class:"button" %>
-    <%= link_to 'Voltar', kinds_path, class:"button" %>
+    <%= form.submit "Enviar", class:"btn btn-primary" %>
+    <%= link_to 'Voltar', kinds_path, class:"btn btn-success" %>
   </div>
 <% end %>
