--- a/app/views/kinds/index.html.erb
+++ b/app/views/kinds/index.html.erb
@@ -1,7 +1,9 @@
 <div class="basic-grey">
-<p id="notice"><%= notice %></p>
+  <script>
+    $.notify('<%= notice %>', 'success')
+  </script>
 
-<h1>Kinds</h1>
+<h1>Tipos</h1>
 
 <table class="table table-hover">
   <thead>
